# SafeRL_Thesis

./: .gitignore  CMakeLists.txt  Main.py  NeuralModels.py  README.md  contributors.md  demo.py  readme.md
C/: hwsim.cpp  hwsim.hpp
dependencies/: CMakeLists.txt  readme.md
dependencies/doctest/: readme.md
examples/: CMakeLists.txt  hwsim-ex.cpp  libhwsim-ex.cpp
include/: Controllers.hpp  Model.hpp  Plotting.hpp  Policy.hpp  Property.hpp  Road.hpp  Scenario.hpp  Simulation.hpp  Transition.hpp  Utils.hpp  Vehicle.hpp  VehicleBase.hpp  eigenHelper.hpp  hdf5Helper.hpp
install/dependencies/Clothoids/lib/: Clothoids_win_.lib  Clothoids_win__static.lib
install/include/: Controllers.hpp  Transition.hpp
install/lib/: libhwsim-static.lib  libhwsim.lib
install/python/examples/: multi_car.py
install/python/hwsim/hwsim/: simulation.py
matlab/: CMakeLists.txt  mexRoad.cpp  mexSim.cpp
matlab/+hwsim/: Property.m  Scenario.m  Simulation.m  Vehicle.m  utils.m
matlab/+hwsim/+controllers/: Switching_controller.m
matlab/+hwsim/+drivers/: Driver.m  StepDriver.m
matlab/+hwsim/+models/: Model.m
matlab/+hwsim/scenarios/: scenario_designer.mlapp  scenarios.mat
matlab/files/: Property.m  Road.m  Scenario.m  Simulation.m  Vehicle.m
matlab/files/+controllers/: PID_controller.m  Stanley_controller.m
matlab/files/+drivers/: ManualDriver.m  StepDriver.m
matlab/files/+models/: DynamicBicycleModel.m  KinematicBicycleModel.m
matlab/files/scenarios/: scenario_designer.mlapp
python/examples/: custom_policy.py  multi_car.py  single_car.py  stress_test.py
python/hwsim/: setup.py  setup.py.in
python/hwsim/hwsim/: __init__.py  _utils.py  _wrapper.py  _wrapper.py.in  metric.py  model.py  plotting.py  policy.py  scenario.py  serialization.py  simulation.py  utils.py  vehicle.py
python/implementation/: Agents.py  DqnBuffers.py  GraphPlotter.py  HelperClasses.py  Main.py  Models.py  NeuralModels.py  Policies.py  RL_Policies.py  advanced_network  custom_AC_policy.py
python/implementation/.ipynb_checkpoints/: GraphPlotter-checkpoint.py  Main-checkpoint.py
python/implementation/logfiles/tb/2021-06-21 - 14h01m32s - Seed10/: events.out.tfevents.1624276892.JINZO.2084.5.v2
python/implementation/logfiles/tb/2021-06-21 - 14h03m56s - Seed10/: events.out.tfevents.1624277036.JINZO.8760.5.v2
python/implementation/logfiles/tb/2021-06-21 - 14h04m42s - Seed10/: events.out.tfevents.1624277082.JINZO.15136.5.v2
python/implementation/logfiles/tb/2021-06-21 - 14h05m05s - Seed10/: events.out.tfevents.1624277105.JINZO.11040.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h42m09s - Seed10/: events.out.tfevents.1625204529.JINZO.2268.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h42m22s - Seed10/: events.out.tfevents.1625204542.JINZO.6408.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h42m35s - Seed10/: events.out.tfevents.1625204555.JINZO.2340.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h43m22s - Seed10/: events.out.tfevents.1625204602.JINZO.11084.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h48m09s - Seed10/: events.out.tfevents.1625204889.JINZO.2676.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h52m16s - Seed10/: events.out.tfevents.1625205136.JINZO.16860.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h53m49s - Seed10/: events.out.tfevents.1625205229.JINZO.1728.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h54m42s - Seed10/: events.out.tfevents.1625205282.JINZO.5956.5.v2
python/implementation/logfiles/tb/2021-07-02 - 07h55m47s - Seed10/: events.out.tfevents.1625205347.JINZO.13204.5.v2
python/implementation/logfiles/tb/2021-07-02 - 08h43m59s - Seed10/: events.out.tfevents.1625208239.JINZO.4056.5.v2
python/implementation/logfiles/tb/2021-07-02 - 08h45m30s - Seed10/: events.out.tfevents.1625208330.JINZO.3608.5.v2
python/implementation/logfiles/tb/2021-07-02 - 09h01m34s - Seed10/: events.out.tfevents.1625209294.JINZO.1052.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h46m37s - Seed10/: events.out.tfevents.1625647597.JINZO.17156.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h46m48s - Seed10/: events.out.tfevents.1625647608.JINZO.8948.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h47m05s - Seed10/: events.out.tfevents.1625647625.JINZO.16052.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h47m27s - Seed10/: events.out.tfevents.1625647647.JINZO.2880.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h48m07s - Seed10/: events.out.tfevents.1625647687.JINZO.2136.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h49m02s - Seed10/: events.out.tfevents.1625647742.JINZO.13352.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h49m48s - Seed10/: events.out.tfevents.1625647788.JINZO.7268.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h50m47s - Seed10/: events.out.tfevents.1625647847.JINZO.12392.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h52m10s - Seed10/: events.out.tfevents.1625647930.JINZO.8468.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h53m55s - Seed10/: events.out.tfevents.1625648035.JINZO.13184.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h55m00s - Seed10/: events.out.tfevents.1625648100.JINZO.16252.5.v2
python/implementation/logfiles/tb/2021-07-07 - 10h59m47s - Seed10/: events.out.tfevents.1625648387.JINZO.11384.5.v2
python/implementation/logs/multi_car_-1/: log.h5  sim_cfg.jsonc
python/implementation/models/: ActorCriticNetworkSingleAction  model_variables  model_weights.data-00000-of-00001  model_weights.index  train_output  training_variables
python/implementation/trained_models/: model_variables  model_weights.data-00000-of-00001  model_weights.index  model_weights_overnight.data-00000-of-00001  model_weights_overnight.index  train_output  training_variables  training_variables.p  training_variables.xls
scenarios/: scenarios.h5  scenarios.mat
tests/: CMakeLists.txt  Clothoids-test.cpp  Eigen-test.cpp  hwsim-test.cpp  libhwsim-test.cpp  perf-test.cpp
(+23 files in other folders)
